Instances with state info
