# server/api/swagger.yaml
@@ -553,6 +553,14 @@ paths:
           in: query
           type: string
           required: false
+        - name: since
+          in: query
+          type: string
+          required: false
+        - name: include_services
+          in: query
+          type: boolean
+          required: false
       responses:
         200:
           description: The list of instances
